--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           <img src="img/logo.jpg" class="card-img-top project-image"alt="coffe">
           <a href="img/logo.jpg" class="search-link"><i class="fas fa-search"></i></a>
         </div>
-              <h4 class="my-2 text-capitalize">Grafic Design</h4>
+              <h4 class="my-2 text-capitalize">Graphic Design</h4>
         <p class="lead text-muted">Creation of logos, posters, advertising, packaging among other things</p>
       </div>
     </div>
@@ -400,7 +400,7 @@
         <img src="img/image15.png" class="card-img-top project-image"alt="coffe">
           <a href="img/image15.png" class="search-link"><i class="fas fa-search"> </i> </a>
       </div>
-        <h4 class="my-2 text-capitalize">Fotography</h4>
+        <h4 class="my-2 text-capitalize">Photography</h4>
           <p class="lead text-muted">Photography and editing in Adobe photoshop, landscapes, people, objects and food.</p>
     </div>
   </div>
